# c2pa-knowledge-graph

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  spec-version.json
.claude/skills/c2pa-kg/: SKILL.md
.github/workflows/: ci.yml
schemas/: predicate-schema.json
src/c2pa_kg/: __init__.py  cli.py  models.py
src/c2pa_kg/builders/: __init__.py  ir_builder.py
src/c2pa_kg/emitters/: __init__.py  changelog.py  jsonld.py  rules.py  turtle.py
src/c2pa_kg/parsers/: __init__.py  asciidoc.py  cddl.py  json_schema.py
src/c2pa_kg/server/: __init__.py  mcp_server.py
tests/: conftest.py  test_asciidoc_parser.py  test_cddl_parser.py  test_cli.py  test_emitters.py  test_ir_builder.py  test_json_schema_parser.py  test_models.py  test_predicates.py  test_versioning.py
versions/0.7/: metadata.json  ontology.ttl  validation-rules.json
versions/0.8/: context.jsonld  metadata.json  ontology.ttl  validation-rules.json
versions/1.0/: context.jsonld  metadata.json  ontology.ttl  validation-rules.json
versions/1.1/: context.jsonld  metadata.json  ontology.ttl  validation-rules.json
versions/1.2/: context.jsonld  metadata.json  ontology.ttl  validation-rules.json
versions/1.3/: context.jsonld  metadata.json  ontology.ttl  validation-rules.json
versions/1.4/: context.jsonld  metadata.json  ontology.ttl  validation-rules.json
versions/2.0/: context.jsonld  metadata.json  ontology.ttl  validation-rules.json
versions/2.1/: context.jsonld  metadata.json  ontology.ttl  validation-rules.json
versions/2.2/: context.jsonld  metadata.json  ontology.ttl  validation-rules.json
versions/2.3/: context.jsonld  metadata.json  ontology.ttl  validation-rules.json
versions/2.4/: context.jsonld  metadata.json  ontology.ttl  predicates.json  validation-rules.json
(+2 files in other folders)
